# migas-multikanal

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/adapters/: base.py  instagram.py  utils.py  whatsapp.py
app/adapters/email/: listener.py  sender.py
app/api/: auth.py  dependencies.py  routes.py
app/core/: config.py
app/repositories/: base.py  conversation.py  message.py
app/services/: chatbot.py  orchestrator.py  parsers.py  scheduler.py
test/: test_azure_email.py  test_gmail_smtp.py
